# NURBS

./: .gitignore  CMakeLists.txt  MANIFEST  Makefile  README.md  blender_script.py  core.cpp  interface.py  test.py  untitled.blend
cpp_src/: core.cpp
python_src/: CircularNURBS_blender.py  CircularNURBS_interface.py  CyclicNURBS.py.in  CyclicNURBS_blender.py  CyclicNURBS_data.py  CyclicNURBS_interface.py  CyclicNURBS_path.py.in
